gh pages añadido

--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
+
 {
+  "homepage":"https://Mafesita23.github.io/Portafolio-Mafe",
   "name": "portafolio-mafe",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -17,8 +21,10 @@
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.13",
+    "gh-pages": "^4.0.0",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4",
     "vite": "^4.0.0"
   }
 }
+
