--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
-
 {
-  "homepage":"https://Mafesita23.github.io/Portafolio-Mafe",
-  "name": "portafolio-mafe",
+  "homepage": "https://Mafesita23.github.io/Portafolio-Mafe",
+  "name": "Portafolio-Mafe",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,8 +12,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "hooks": "^0.3.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
@@ -27,4 +28,3 @@
     "vite": "^4.0.0"
   }
 }
-
